# insta

./: .gitignore  BLOG_SERIES_FULL.md  DESIGN_SPEC_15PY.md  MARKETING_REPORT.html  MARKETING_REPORT.md  README.md  YANGPYEONG_BUSINESS_PLAN.html  YANGPYEONG_BUSINESS_PLAN.md  add_sources.py  calculate_roi.py  create_new_mission.py  debug_sources.py  evaluate_design.py  find_notebook.py  find_path.py  generate_blog_series.py  generate_content.py  generate_insta_post.py  inspect_pkg.py  inspect_rpc.py  package.json  print_business_plan.py  pyproject.toml  query_strategy.py  save_manual_cookies.py  show_notebooks.py  test_auth.py  test_import.py  test_import_2.py  test_import_3.py  update_cookies.py  update_report.py
src/notebooklm_mcp/: auth.py  main.py  server.py
